# Skypro_OOP

./: 14.1.py  README.md  pyproject.toml
src/: 14.1_main.py  Category.py  Product.py  category.py  product.py
tests/: conftest.py  test_category.py  test_product.py
