[tool.poetry]
name = "pythonproject2"
version = "0.1.0"
description = ""
authors = ["elenazaharova <elena.zakharova@simbirsoft.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
product = "^0.1.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
