[tool.poetry]
name = "pythonproject2"
version = "0.1.0"
description = ""
authors = ["elenazaharova <elena.zakharova@simbirsoft.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
product = "^0.1.1.1"


[tool.poetry.group.lint.dependencies]
flake8 = "^7.1.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
